--- a/package.json
+++ b/package.json
@@ -29,5 +29,18 @@
     "@angular/compiler-cli": "~12.1.2",
     "@types/node": "^12.11.1",
     "typescript": "~4.3.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 12.1.2.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pinhak2/Angular9.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pinhak2/Angular9/issues"
+  },
+  "homepage": "https://github.com/pinhak2/Angular9#readme"
 }
